# DFaaSOptimizer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  benchmark_planar_3reg.py  compare_results.py  config.json  convert_data_format.py  decentralized_auction.py  decentralized_auction_modelbased.py  decentralized_bestresponse.py  decentralized_diffusion.py  decentralized_dual.py  decentralized_powerd.py  fwd_analysis.py  generate_data.py  heuristic_coordinator.py  l_run_iterations.py  load_generator.py  logs_postprocessing.py  model.py  postprocessing.py  pyproject.toml  requirements.txt  rmp.py  run.py  run_centralized_model.py  run_faasmacro.py  run_faasmadea.py  sp.py  train_rl_agent.py  utilities.py  what_if_analysis.py
config_files/: planar_comparison.json  planar_hierarchical.json
docs/: hierarchical_model_experiment_plan.md
faas-bestresponse-note/: README.md  faas-mabr.tex  main.tex  references.bib
faas-madig-note/: .gitignore  README.md  faas-madig.tex  main.tex  references.bib
faas-mald-note/: README.md  faas-mald.tex  main.tex  references.bib
faas-mapod-note/: README.md  faas-mapod.tex  main.tex  references.bib
generators/: generate_data.py  generate_load.py  load_generator.py
hierarchical_auction/: __init__.py  engine.py  flow_mapper.py  madea_runner.py  pricing.py  runner.py  structure.py  structure_graph.py  token_manager.py  types.py
models/: __init__.py  auction_models.py  model.py  rmp.py  sp.py
remote_experiments/: README.md  __init__.py  batch.py  cli.py  instances.py  inventory.yaml.example  jobs.py  manifest.py  runner.py  selection.py  stats.py  tui.py
rlagents/: ma_environment.py  postprocessing.py  sa_environment.py
test_instances/: config.json  experiments.json
tests/: conftest.py  test_algorithm_helpers.py  test_analysis_extended.py  test_benchmark_planar_3reg.py  test_bestresponse_e2e.py  test_bestresponse_helpers.py  test_bestresponse_reopt.py  test_bestresponse_run.py  test_bestresponse_wiring.py  test_centralized_feasibility.py  test_convert_data_format.py  test_coverage_expansion.py  test_diffusion_e2e.py  test_diffusion_helpers.py  test_diffusion_wiring.py  test_dual_e2e.py  test_dual_helpers.py  test_e2e_gurobi_planar.py  test_faas_helpers_extended.py  test_generate_data_extended.py  test_generate_data_helpers.py  test_hierarchical_engine.py  test_hierarchical_flow_mapper.py  test_hierarchical_madea_runner.py  test_hierarchical_pricing.py  test_hierarchical_runner.py  test_hierarchical_structure_graph.py  test_hierarchical_token_manager.py  test_hierarchical_types.py  test_load_generator.py  test_logs_postprocessing.py  test_lsp_capped.py  test_model_construction.py  test_paper_experiment_suites.py  test_parse_args_extended.py  test_powerd_e2e.py  (+19 more)
(+114 files in other folders)
