[project]
name = "dfaasoptimizer"
version = "0.1.0"
description = "Optimization models and experiment orchestration for FRALB/DiFRALB in FaaS-enabled edge-cloud continuums."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "contourpy==1.3.2",
  "cycler==0.12.1",
  "fonttools==4.59.0",
  "gurobipy==12.0.3",
  "kiwisolver==1.4.8",
  "matplotlib==3.10.3",
  "networkx==3.4.2",
  "numpy==2.2.6",
  "packaging==25.0",
  "pandas==2.3.1",
  "parse==1.20.2",
  "pillow==11.3.0",
  "ply==3.11",
  "pyomo==6.9.2",
  "pyparsing==3.2.3",
  "python-dateutil==2.9.0.post0",
  "pyyaml>=6.0.2",
  "pytz==2025.2",
  "scipy==1.15.3",
  "six==1.17.0",
  "tqdm==4.67.1",
  "tzdata==2025.2",
]

[tool.uv]
package = false
